Fix nav bar not spanning whole height on small screens

--- a/styles.css
+++ b/styles.css
@@ -86,7 +86,7 @@ h3 {
 .nav {
   flex-flow: column;
   padding: 2.8rem 2rem 2rem 2.4rem;
-  position: absolute;
+  position: fixed;
   right: 0;
   top: 0;
   width: 70%;
@@ -100,7 +100,7 @@ h3 {
   width: 100%;
   height: 100%;
   background-color: rgba(0, 0, 26, 0.5);
-  position: absolute;
+  position: fixed;
   top: 0;
   left: 0;
 }
